--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="111111" rel="stylesheet" type="text/css">
 <style>
 /* Center the loader */
 #loader {
@@ -62,19 +62,8 @@
   <h2>Tada!</h2>
   <p>Some text in my newly loaded page..</p>
 </div>
-
-<script>
-var myVar;
-
-function myFunction() {
-  myVar = setTimeout(showPage, 3000);
-}
-
-function showPage() {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("myDiv").style.display = "block";
-}
-</script>
-
+  
+<!-- preloader -->
+<script src="wc/preloader/preloader.js"></script>
 </body>
 </html>
