--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="wc/preloader/preloader.js" rel="stylesheet" type="text/css">
+<link href="wc/preloader/preloader.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="myFunction()" style="margin:0;">
 
