--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk-UA">
 <head>
 <link href="/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
 </head>
