--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="uk-UA">
 <head>
 <link href="/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
 </head>
 <body onload="myFunction()" style="margin:0;">
