--- a/html/00231.html
+++ b/html/00231.html
@@ -197,5 +197,6 @@ function showPage() {
   document.getElementById("myDiv").style.display = "block";
 }
 </script>
+<script async="" src="https://www.threads.net/embed.js"></script>
 </body>
 </html>
