--- a/html/00231.html
+++ b/html/00231.html
@@ -198,5 +198,6 @@ function showPage() {
 }
 </script>
 <script async="" src="https://www.threads.net/embed.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
 </body>
 </html>
