--- a/html/1.html
+++ b/html/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-<link href="/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+<link href="//furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
 <meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
@@ -28,6 +28,6 @@
   
 </div> 
 <!-- preloader -->
-<script src="/wc/preloader/preloader.js"></script>
+<script src="//furiyaai.github.io/wc/preloader/preloader.js"></script>
 </body>
-</html>
+</html> 
