--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="uk-UA">
 <head>
 <link href="//furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+<link rel="canonical" href="//furiyaai.github.io/wc/"> 
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
 <meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
