--- a/html/multilang-master/multilang-master/index.html
+++ b/html/multilang-master/multilang-master/index.html
@@ -16,9 +16,9 @@
                 ItGid.info
             </h1>
             <select class="change-lang">
-                <option value="ua">UA</option>
-                <option value="ru" selected>RU</option>
-                <option value="en">EN</option>
+                <option value="ua"><img src="1111" width="20" height="20" alt="" />UA</option>
+                <option value="ru" selected><img src="1111" width="20" height="20" alt="" />RU</option>
+                <option value="en"><img src="1111" width="20" height="20" alt="" />EN</option>
             </select>
         </div>
     </header>
