--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
 </div> 
 <!-- preloader -->
 <script src="//furiyaai.github.io/wc/preloader/preloader.js"></script>
+  <select class="change-lang">
+                <option value="ua"><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />UA</option>
+                <option value="ru" selected><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />RU</option>
+                <option value="en"><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />EN</option>
+            </select>
 </body>
 </html> 
