--- a/html/multilang-master/multilang-master/index.html
+++ b/html/multilang-master/multilang-master/index.html
@@ -61,6 +61,12 @@
             </ul>
         </div>
     </div>
+
+    <select class="change-lang">
+                <option value="ua"><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />UA</option>
+                <option value="ru" selected><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />RU</option>
+                <option value="en"><img src="https://img.joomcdn.net/884be95f790e769d0e5e8629006a4ca8ff924fed_original.jpeg" width="20" height="20" alt="" />EN</option>
+            </select>
     <script src="lang.js"></script>
     <script src="app.js"></script>
 </body>
