--- a/404.html
+++ b/404.html
@@ -1,1 +1,27 @@
-404
+<!DOCTYPE html>
+<html lang="uk-UA">
+<head>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
+<meta name="keywords" content="Furiya AI, FuriyaAI">
+<!-- favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2855bf">
+<meta name="apple-mobile-web-app-title" content="Furiya AI">
+<meta name="application-name" content="Furiya AI">
+<meta name="msapplication-TileColor" content="#2855bf">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
+</head>
+<body>
+  
+<h1 style="text-align: center;">404</h1>
+<p style="text-align: center;">Ця сторінка не існує або її перенесли на іншу адресу.</p>
+<p style="text-align: center;"><a href="/">Повернутися на головну сторінку</a></p>
+  
+</body>
+</html> 
