--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-<link href="//furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
-<link rel="canonical" href="//furiyaai.github.io/wc/"> 
+<link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+<link rel="canonical" href="https://furiyaai.github.io/wc/"> 
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
 <meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
@@ -29,6 +29,6 @@
   
 </div> 
 <!-- preloader -->
-<script src="//furiyaai.github.io/wc/preloader/preloader.js"></script>
+<script src="https://furiyaai.github.io/wc/preloader/preloader.js"></script>
 </body>
 </html> 
