--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="uk-UA">
 <head>
 <link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+<link href="https://furiyaai.github.io/wc/widget-carousel/content.css" rel="stylesheet" type="text/css">
 <!-- <link rel="canonical" href="https://furiyaai.github.io/">  -->
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
@@ -19,15 +20,42 @@
 <meta name="msapplication-TileColor" content="#2855bf">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 </head>
 <body onload="myFunction()">
 <div id="loader"></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
   
-  <h2>Tada!</h2>
-  <p>Some text in my newly loaded page..</p>
+  <div class="biruTabsBox">
+  <div id="biruTabs2" class="biruTab">
+    <ul>
+      <li>
+        <div class="tabCaption">
+          <h3>111</h3>
+          </div>
+      </li>
+      <li>
+        <div class="tabCaption">
+          <h3>222</h3>
+          </div>
+      </li>
+       <li>
+       <div class="tabCaption">
+          <h3>333</h3>
+          </div>
+     </li>
+    </ul>
+    <ol class="tabs">
+      <li class="tab active">1111</li>
+      <li class="tab">2222</li>
+      <li class="tab">333</li>
+    </ol>
+  </div>
+</div>   
   
 </div> 
+<script src="https://furiyaai.github.io/wc/widget-carousel/content.js"></script> 
 <!-- preloader -->
 <script src="https://furiyaai.github.io/wc/preloader/preloader.js"></script>
 </body>
