--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-<link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
-<link href="https://furiyaai.github.io/wc/widget-carousel/content.css" rel="stylesheet" type="text/css">
 <!-- <link rel="canonical" href="https://furiyaai.github.io/">  -->
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
@@ -20,8 +18,20 @@
 <meta name="msapplication-TileColor" content="#2855bf">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!-- preload -->
+ <link rel="preload" href="https://furiyaai.github.io/wc/preloader/preloader.css" as="style" />
+ <link rel="preload" href="https://furiyaai.github.io/wc/widget-carousel/content.css" as="style" />
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" as="style" />
+   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" as="style" /
+  
+  <!-- CSS -->
+  <link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
+  <link href="https://furiyaai.github.io/wc/widget-carousel/content.css" rel="stylesheet" type="text/css">
+  
+  <!-- JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  
 </head>
 <body onload="myFunction()">
 <div id="loader"></div>
