--- a/index.html
+++ b/index.html
@@ -31,13 +31,29 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   
+<style>
+.qew{
+border-radius: 4px;
+background-color: #ffffff;
+box-shadow: 0px 0px 6px 0px #000;
+}
+</style>
+
 </head>
 <body onload="myFunction()">
 <div id="loader"></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
+<div class="qew">
+
+<div>
+<p>
+<img style="float: left; margin: 5px 7px 0px 0;" src="https://furiyaai.github.io/wc/img/furiyaai/furiyaai.gif" alt="logo" />
+<p style="text-align: right; margin: 0px 3px 0px 0;"><button onclick="window.location.href = 'https://furiyaai-pp-ua.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp';">Google Translate</button></p>
+<b>Furiya AI</b><span style="font-weight: 400;"> - проект присвячений мистецтву інтелекту для генерації картинок антропоморфних тварин або простіше "AI Images Furry".</span></p>
+</div>
   
-  
-  
+ <hr />
+
   <div class="biruTabsBox">
   <div id="biruTabs2" class="biruTab">
     <ul>
@@ -63,8 +79,15 @@
       <li class="tab">333</li>
     </ol>
   </div>
-</div>   
-  
+</div>
+   
+<br>
+
+<div style="height: 85px;">
+<!-- порожнеча -->
+</div>
+
+</div>  
 </div> 
 <script src="https://furiyaai.github.io/wc/widget-carousel/content.js"></script> 
 <!-- preloader -->
