--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ box-shadow: 0px 0px 6px 0px #000;
 <div>
 <p>
 <img style="float: left; margin: 5px 7px 0px 0;" src="https://furiyaai.github.io/wc/img/furiyaai/furiyaai.gif" width="100" height="100" alt="logo" />
-<p style="text-align: right; margin: 0px 3px 0px 0;"><button onclick="window.location.href = 'https://furiyaai-pp-ua.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp';">Google Translate</button></p>
+<p style="text-align: right; margin: 0px 3px 0px 0;"><a href="https://furiyaai-pp-ua.translate.goog/?_x_tr_sl=auto&amp;_x_tr_tl=en&amp;_x_tr_hl=en&amp;_x_tr_pto=wapp"><button>Google Translate</button></p>
 <p margin: 0px 3px 0px 0;"><b>Furiya AI</b><span style="font-weight: 400;"> - проект присвячений мистецтву інтелекту для генерації картинок антропоморфних тварин або простіше "AI Images Furry".</span></p>
 </div>
   
