--- a/html/3_1.html
+++ b/html/3_1.html
@@ -2,7 +2,7 @@
 <html lang="uk-UA">
 <head>
 <!-- <link rel="canonical" href="https://furiyaai.github.io/">  -->
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="viewport" content="width=device-width,initial-scale=0"/>
 <title>Furiya AI</title>
 <meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
 <meta name="keywords" content="Furiya AI, FuriyaAI">
@@ -21,7 +21,8 @@
   <!-- preload -->
  <link rel="preload" href="https://furiyaai.github.io/wc/preloader/preloader.css" as="style" />
  <link rel="preload" href="https://furiyaai.github.io/wc/widget-carousel/content.css" as="style" />
- <link rel="preload" href="https://furiyaai.github.io/wc/widget-carousel/content.js" as="style" />
+ <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" as="style" />
+ <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" as="style" />
   
   <!-- CSS -->
   <link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
@@ -47,9 +48,9 @@ box-shadow: 0px 0px 6px 0px #000;
 
 <div>
 <p>
-<img style="float: left; margin: 5px 7px 0px 0;" src="https://furiyaai.github.io/wc/img/furiyaai/furiyaai.gif" alt="logo" />
-<p style="text-align: right; margin: 0px 3px 0px 0;"><button onclick="window.location.href = 'https://furiyaai-pp-ua.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp';">Google Translate</button></p>
-<b>Furiya AI</b><span style="font-weight: 400;"> - проект присвячений мистецтву інтелекту для генерації картинок антропоморфних тварин або простіше "AI Images Furry".</span></p>
+<img style="float: left; margin: 5px 7px 0px 0;" src="https://furiyaai.github.io/wc/img/furiyaai/furiyaai.gif" width="100" height="100" alt="logo" />
+<p style="text-align: right; margin: 0px 15px 0px 0;"><a href="https://furiyaai-pp-ua.translate.goog/?_x_tr_sl=auto&amp;_x_tr_tl=en&amp;_x_tr_hl=en&amp;_x_tr_pto=wapp"><button>Google Translate</button></a></p>
+<p style="margin: 5px 9px 0px 10px;"><b>Furiya AI</b><span style="font-weight: 400;"> - проект присвячений мистецтву інтелекту для генерації картинок антропоморфних тварин або простіше "AI Images Furry".</span></p>
 </div>
   
  <hr />
