--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="uk-UA">
 <head>
 <!-- <link rel="canonical" href="https://furiyaai.github.io/">  -->
-<meta name="viewport" content="width=device-width,initial-scale=0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Furiya AI</title>
-<meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок або простіше "ІІ картинки".">
+<meta name="description" content="Furiya AI - проект присвячений мистецтву інтелекту для генерації картинок антропоморфних тварин або простіше "AI Images Furry".">
 <meta name="keywords" content="Furiya AI, FuriyaAI">
 <!-- favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -23,6 +23,8 @@
  <link rel="preload" href="https://furiyaai.github.io/wc/widget-carousel/content.css" as="style" />
  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" as="style" />
  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" as="style" />
+ <link rel="preload" href="https://liberapay.com/furiyaai/widgets/button.js" as="style" />
+ <link rel="preload" href="https://liberapay.com/furiyaai/widgets/receiving.js" as="style" />
   
   <!-- CSS -->
   <link href="https://furiyaai.github.io/wc/preloader/preloader.css" rel="stylesheet" type="text/css">
@@ -84,8 +86,16 @@ box-shadow: 0px 0px 6px 0px #000;
    
 <br>
 
-<div style="height: 85px;">
-<!-- порожнеча -->
+<div style="height: 190px;">
+
+<div>
+<div style=" margin: 0px 0px 0px 5px;">
+<script src="https://liberapay.com/furiyaai/widgets/button.js"></script>
+<noscript><a href="https://liberapay.com/furiyaai/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
+</div>
+<div style=" margin: 3px 0px 0px 9px;"><script src="https://liberapay.com/furiyaai/widgets/receiving.js"></script></div>
+</div>
+
 </div>
 
 </div>  
