--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@ box-shadow: 0px 0px 6px 0px #000;
 <div style="height: 190px;">
 
 <div>
-<div style=" margin: 0px 0px 0px 5px;">
-<script src="https://liberapay.com/furiyaai/widgets/button.js"></script>
-<noscript><a href="https://liberapay.com/furiyaai/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
-</div>
+<div style=" margin: 0px 0px 0px 5px;"><script src="https://liberapay.com/furiyaai/widgets/button.js"></script><noscript><a href="https://liberapay.com/furiyaai/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript></div>
 <div style=" margin: 3px 0px 0px 9px;"><script src="https://liberapay.com/furiyaai/widgets/receiving.js"></script></div>
+</div>
+<div>
+<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="furiyaai" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </div>
 
 </div>
